Hot fix in css (mcustomscrollbar)

--- a/sites/all/themes/vlg/css/main.css
+++ b/sites/all/themes/vlg/css/main.css
@@ -970,7 +970,7 @@ h2 {
 @media (max-width: 992px) {
   .v-grid-template__list-img {
     width: 100%;
-    height: 40%;
+    height: 400px;
     float: none;
     -webkit-background-size: cover;
     background-size: cover ;
@@ -981,6 +981,9 @@ h2 {
     float: none;
     padding-left: 0;
   }
+  .village-slider {
+    height: auto;
+}
 }
 @media (max-width: 768px) {
   .v-grid-template__text {
